Still attempting to fix the wrapping issue with the h2 in the landing component

--- a/src/Styles/Landing.css
+++ b/src/Styles/Landing.css
@@ -55,6 +55,7 @@
     );
     height: 40%;
     width: 100%;
+    white-space: nowrap;
 }
 .Landing .landing_Container .banner-text_Container h2 {
     font-size: 3.5em;
@@ -110,6 +111,15 @@
         font-size: 2.6em;
     }
     .Landing .landing_Container .banner-text_Container h3 {
-        font-size: 1.0em;
+        font-size: 1em;
+    }
+}
+
+@media all and (max-width: 330px) {
+    .Landing .landing_Container .banner-text_Container h2 {
+        font-size: 2.5em;
+    }
+    .Landing .landing_Container .banner-text_Container h3 {
+        font-size: 1em;
     }
 }
